--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -34,7 +34,7 @@ mixin my_groups
               a.inherit-color.chevron(data-toggle='collapse', data-target='#' + panelid): b
                 i.far.fa-caret-square-down.fa-fw.blog
                 | &nbsp;#{group.longName}
-              a.inherit-color(href='/groups/' + group.id): span.float-right: i.fas.fa-users.fa-fw.tooltipify(data-toggle='tooltip', title=t('groups.tooltip.gotogroup'))
+              a.inherit-color(href='/groups/' + group.id): span.float-end: i.fas.fa-users.fa-fw.tooltipify(data-toggle='tooltip', title=t('groups.tooltip.gotogroup'))
             .collapse.show(id=panelid)
               .card-body
                 +wikichangesOrBlogs(postsByGroup[group.id], panelid, 'blogs', t('wiki.blogposts'))
@@ -54,7 +54,7 @@ mixin my_activities
             i.fas.fa-question.fa-fw.tooltipify(data-toggle='tooltip', title=t('activities.tooltip.unknown'))
           | &nbsp; #{activity.startDateTime().setLocale(language).toLocaleString(DateTime.DATE_SHORT)} &nbsp;
           a(href=activity.fullyQualifiedUrl()) #{activity.title()}
-          a.float-right(href='/groups/' + activity.assignedGroup())
+          a.float-end(href='/groups/' + activity.assignedGroup())
             .badge.text-white(style='background-color: ' + activity.colorRGB) #{activity.groupName()}
 
 mixin wikichangesOrBlogs(items, panelid, prefix, title)
@@ -66,6 +66,6 @@ mixin wikichangesOrBlogs(items, panelid, prefix, title)
     ul.list-group.list-group-flush(class=prefix + ' collapse show')
       each item in items
         li.list-group-item.py-0
-          a.modaldialog(data-toggle='modal', data-target='#wikidialog', data-link=item.dialogUrl(), href='#') #{item.pureName()}
-          small.float-right #{item.date().setLocale(language).toLocaleString(DateTime.DATE_SHORT)}&nbsp;
+          a.modaldialog(data-bs-toggle='modal', data-bs-target='#wikidialog', data-link=item.dialogUrl(), href='#') #{item.pureName()}
+          small.float-end #{item.date().setLocale(language).toLocaleString(DateTime.DATE_SHORT)}&nbsp;
             a(href=item.url()): i.fas.fa-book.fa-fw.tooltipify(data-toggle='tooltip', title=t('wiki.tooltip.gotopage'))
