--- a/softwerkskammer/lib/groups/views/index.pug
+++ b/softwerkskammer/lib/groups/views/index.pug
@@ -11,7 +11,7 @@ block content
   .row
     .col-12
       .page-header
-        .btn-group.float-right
+        .btn-group.float-end
           if (accessrights.isSuperuser())
             a.btn.btn-light(href='new/', title=t('groups.new')): i.far.fa-file.fa-fw
         h1 #{t('groups.groups')}
