--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -47,7 +47,7 @@
                         input#sign-in-password.form-control.trim-text(type='password', name='password', value='')
                   .row
                     .col-12
-                      .btn-group.float-right
+                      .btn-group.float-end
                         button.btn.btn-primary(type='submit') #{t('authentication.sign_in_button')}
 
               #sign-up-contents.tab-pane.fade
@@ -64,7 +64,7 @@
                         input#sign-up-password.form-control.trim-text(type='password', name='password', value='')
                   .row
                     .col-12
-                      .btn-group.float-right
+                      .btn-group.float-end
                         button.btn.btn-primary(type='submit') #{t('authentication.sign_up_button')}
 
               #add-to-existing-contents.tab-pane.fade
