--- a/softwerkskammer/lib/site/views/passwordDialog.pug
+++ b/softwerkskammer/lib/site/views/passwordDialog.pug
@@ -17,7 +17,7 @@
               input#password2.form-control.trim-text(type='password', name='password2', value='')
         .row
           .col-12
-            .btn-group.float-right
+            .btn-group.float-end
               button.btn.btn-primary(type='submit') #{t('general.save')}
 
 script.
