--- a/softwerkskammer/lib/site/views/superuserRightsRequired.pug
+++ b/softwerkskammer/lib/site/views/superuserRightsRequired.pug
@@ -7,12 +7,12 @@ block content
     .col-lg-6
       h3 Um auf diese Seite zuzugreifen, musst Du Superuser sein!
       p Du wolltest auf eine Seite zugreifen, für die Du Superuserrechte brauchst.
-      p Sollte dies ein Fehler in der Anwendung sein, bitten wir um 
+      p Sollte dies ein Fehler in der Anwendung sein, bitten wir um
         a(href='https://github.com/softwerkskammer/Agora/issues/') Rückmeldung.
       p Das Agora-Team bittet um Entschuldigung.
-      p: a.btn.float-right.btn-primary(href='javascript:history.back()') Zurück
+      p: a.btn.float-end.btn-primary(href='javascript:history.back()') Zurück
     .col-lg-6
       h3 Information
-      p Die geschützte Seite war: <br> 
+      p Die geschützte Seite war: <br>
         | #{requestedPage}
       p Bitte teile uns dies in der Fehlermeldung mit.
