--- a/softwerkskammer/lib/wiki/views/compare.pug
+++ b/softwerkskammer/lib/wiki/views/compare.pug
@@ -5,7 +5,7 @@ block title
 
 block content
   .page-header
-    .btn-group.float-right
+    .btn-group.float-end
       a.btn.btn-light(href='javascript:history.back()', type='cancel') #{t('general.back')}
     h1 #{t('wiki.comparison_of')} "#{pageName}"&nbsp;
       small #{t('wiki.in')} '#{subdir}'
