--- a/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
+++ b/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
@@ -6,7 +6,7 @@ block content
   .row
     .col-12
       .page-header
-        .btn-group.float-right
+        .btn-group.float-end
           a.btn.btn-light(href='../alle/europaweite-veranstaltungen-' + year, title=t('wiki.as_table'))
             i.fas.fa-table.fa-fw
             | &nbsp;#{t('wiki.as_table')}
@@ -64,4 +64,4 @@ block scripts
     .fc-content {
       max-height: 60px !important;
     }
-    
+
