--- a/softwerkskammer/lib/wiki/views/history.pug
+++ b/softwerkskammer/lib/wiki/views/history.pug
@@ -42,7 +42,7 @@ block title
 
 block content
   .page-header
-    .btn-group.float-right
+    .btn-group.float-end
       a.btn.btn-light(href='javascript:history.back()', type='cancel') #{t('general.back')}
       if (accessrights.isRegistered())
         button#rev-compare.btn.btn-light(data-pageName=pageName, data-subdir=subdir)
