--- a/softwerkskammer/lib/wiki/views/wiki-mixins.pug
+++ b/softwerkskammer/lib/wiki/views/wiki-mixins.pug
@@ -1,6 +1,6 @@
 mixin blogposts-panel(posts, feedUrl)
   div
-    .btn-group.float-right
+    .btn-group.float-end
       a.btn.btn-sm.btn-light(href=feedUrl)
         i.fas.fa-fw.fa-rss
         | &nbsp;#{t('wiki.subscribe')}
@@ -9,8 +9,8 @@ mixin blogposts-panel(posts, feedUrl)
     .card.mb-2
       .card-header
         h5.card-title #{post.title}
-          small.float-right #{post.date().setLocale(language).toLocaleString(DateTime.DATE_FULL)}
+          small.float-end #{post.date().setLocale(language).toLocaleString(DateTime.DATE_FULL)}
       .card-body
         .card-text !{post.teaser}
-        small.float-right: a(href=post.url()) #{t('groups.more')}
+        small.float-end: a(href=post.url()) #{t('groups.more')}
 
