--- a/softwerkskammer/views/commonLayout.pug
+++ b/softwerkskammer/views/commonLayout.pug
@@ -22,17 +22,17 @@ html
     if (browserIsTooOld)
       .alert.alert-block.alert-warning
         h2 Please note that we no longer support Internet Explorer versions 7 or 8.
-        p We follow the example of 
-          a(href='https://help.github.com/articles/supported-browsers') github 
+        p We follow the example of
+          a(href='https://help.github.com/articles/supported-browsers') github
           | .
-        p We recommend upgrading to the latest 
+        p We recommend upgrading to the latest
           a(href='https://ie.microsoft.com/') Internet Explorer
-          | , 
+          | ,
           a(href='https://chrome.google.com') Google Chrome
-          | , or 
+          | , or
           a(href='https://mozilla.org/firefox/') Firefox
           | .
-        p If you are using IE 9 or later, make sure you 
+        p If you are using IE 9 or later, make sure you
           a(href='http://windows.microsoft.com/en-US/windows7/webpages-look-incorrect-in-Internet-Explorer') turn off "Compatibility View"
           | .
     else
@@ -61,7 +61,7 @@ script.
   $(document).ready(function () {
     $('.modaldialog').click(function (e) {
       var data = e.currentTarget.dataset;
-      var target = data.target;
+      var target = data.bsTarget;
       var url = data.link;
       $(target + ' .modal-content').load(url);
     });
