--- a/softwerkskammer/lib/site/views/lazyMarkdownCheatsheet.pug
+++ b/softwerkskammer/lib/site/views/lazyMarkdownCheatsheet.pug
@@ -1,9 +1,9 @@
 .modal-header
   h3.modal-title Markdown Cheatsheet
-  button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+  button.btn-close(type='button', data-bs-dismiss='modal', aria-hidden='true')
 .modal-body
   .row
-    .col-md-4.pr-1
+    .col-md-4.pe-1
       .card
         h4.card-header.p-1 Format Text
         .card-body.p-1
@@ -57,7 +57,7 @@
     .col-md-12
       h3 Code Examples in Markdown
   .row
-    .col-md-4.pr-1
+    .col-md-4.pe-0
       .card
         .card-body.p-1
           h5.card-title Syntax highlighting with&nbsp;
@@ -87,4 +87,4 @@
           pre.
             I think you should use an
             &lt;addr&gt; element here instead.
-                                
+
