--- a/softwerkskammer/lib/activities/views/activities-forms.pug
+++ b/softwerkskammer/lib/activities/views/activities-forms.pug
@@ -24,9 +24,9 @@ mixin activityform(activity, groups, editorNames, participantNames)
         .col-md-6
           +text('title', t('activities.title'), activity.title(), t('activities.tooltip.title'), '', activity.clonedFromMeetup())
           .row
-            .col-6.pr-1
+            .col-6.pe-0
               .row.mx-0
-                .col-6.pl-0.pr-1
+                .col-6.pl-0.pe-1.ps-0
                   +date('startDate', t('activities.start'), activity.startDateTime().setLocale(language).toLocaleString(DateTime.DATE_SHORT), t('activities.tooltip.start'), activity.clonedFromMeetup())
                 .col-6.px-1
                   +time('startTime', activity.startDateTime().setLocale(language).toLocaleString(DateTime.TIME_24_SIMPLE), activity.clonedFromMeetup())
@@ -34,7 +34,7 @@ mixin activityform(activity, groups, editorNames, participantNames)
               .row.mx-0
                 .col-6.px-1
                   +date('endDate', t('activities.end'), activity.endDateTime().setLocale(language).toLocaleString(DateTime.DATE_SHORT), t('activities.tooltip.end'), activity.clonedFromMeetup())
-                #dates.col-6.pl-1.pr-0  
+                #dates.col-6.ps-1.pe-0
                   +time('endTime', activity.endDateTime().setLocale(language).toLocaleString(DateTime.TIME_24_SIMPLE), activity.clonedFromMeetup())
           +textarea('description', t('general.description'), activity.description(), '', '', activity.clonedFromMeetup())
           +textarea('direction', t('activities.directions'), activity.direction(), '', '', activity.clonedFromMeetup())
