fix more modals for bs5

--- a/softwerkskammer/lib/site/views/passwordDialog.pug
+++ b/softwerkskammer/lib/site/views/passwordDialog.pug
@@ -1,6 +1,6 @@
 .modal-header
   h3.modal-title #{t('authentication.password_dialog_title')}
-  button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+  button.btn-close(type='button', data-bs-dismiss='modal', aria-hidden='true')
 .modal-body
   .row
     .col-12
