--- a/softwerkskammer/lib/members/views/members-forms.pug
+++ b/softwerkskammer/lib/members/views/members-forms.pug
@@ -64,7 +64,7 @@ mixin memberform(member, regionalgroups, themegroups, tags)
                 i.far.fa-plus-square.fa-fw
                 | &nbsp;#{t('members.authenticate')}
             .col-md-6
-              span.btn.btn-primary.modaldialog(data-toggle='modal', data-target='#passwordDialog', data-link='/passwordDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
+              span.btn.btn-primary.modaldialog(data-bs-toggle='modal', data-bs-target='#passwordDialog', data-link='/passwordDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
                 i.fas.fa-key.fa-fw
                 | &nbsp;#{t('authentication.change_password')}
         if (accessrights.isSuperuser())
