--- a/softwerkskammer/lib/wiki/views/modal.pug
+++ b/softwerkskammer/lib/wiki/views/modal.pug
@@ -3,7 +3,7 @@
     h3.modal-title No Content
   else
     h3.modal-title #{t('wiki.wiki')} "#{subdir}"
-  button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+  button.btn-close(type='button', data-bs-dismiss='modal', aria-hidden='true')
 .modal-body
   if (content)
     | !{content}
