fix broken hamburger menu

--- a/softwerkskammer/views/layoutComponents.pug
+++ b/softwerkskammer/views/layoutComponents.pug
@@ -88,7 +88,7 @@ mixin notificationsBlock(notificationmessage)
 mixin topNavbar()
   a.navbar-brand.py-0(href='/')
     img(src='/img/SoftwerkskammerWappenLinks.png', alt='Softwerkskammer', width='234', height='60')
-  button.navbar-toggler.d-inline.d-sm-none(type='button', data-toggle='collapse', data-target='.collapse-top')
+  button.navbar-toggler.d-inline.d-sm-none(type='button', data-bs-toggle='collapse', data-bs-target='.collapse-top')
     span.sr-only Toggle
     i.fas.fa-bars.fa-lg
 
