feat: use more inclusive language
This replaces the term Softwarecraftman with a more inclusive term.

--- a/softwerkskammer/lib/site/views/index.pug
+++ b/softwerkskammer/lib/site/views/index.pug
@@ -22,10 +22,10 @@ block content
         ul
           li Softwareentwicklung für Dich eine Leidenschaft bedeutet,
           li.
-            Du Teil der deutschsprachigen Software Craftsmanship Community und Teil einer lokalen Softwerkskammer
+            Du Teil der deutschsprachigen Software Craft und Testing Community und Teil einer lokalen Softwerkskammer
             sein möchtest,
           li.
-            Du Dich mit Gleichgesinnten zum Thema Software Craftsmanship und allen damit zusammenhängenden Themen
+            Du Dich mit Gleichgesinnten zum Thema Software Craft und Testing und allen damit zusammenhängenden Themen
             wie Clean Code, TDD etc. austauschen möchtest,
         p Dann ist die Softwerkskammer etwas für Dich!
 
